<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OneClick Cookbook</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">OneClick Cookbook</string>
    <string name="homeMessage">Hello there!</string>
    <string name="homeLoginButton">Login or Signup!</string>
    <string name="homeCreate">Create a recipe</string>
    <string name="title_activity_create_recipe">Create Recipe</string>
    <string name="action_settings">Settings</string>
    <string name="homeViewRecipes">View Recipes</string>
    <string name="homeViewRecipeHistory">View Recipe History</string>
    <string name="homeManagePantry">Manage Pantry</string>
    <string name="homeSearchRecipes">Search for Recipes</string>
    <string name="createDelete">Delete Recipe</string>
    <string name="createDone">Done</string>
    <string name="createAddPhoto">Add Photo</string>
    <string name="createDeletePhoto">Delete Photo</string>
    <string name="createNameHint">Enter Recipe Name</string>
    <string name="createIngredientHint">Enter Ingredients</string>
    <string name="createStepsHint">Enter steps</string>
    <string name="title_activity_view_recipes">Your Recipes</string>
    <string name="title_activity_add_ingredients">Add Ingredients</string>
    <string name="quantityHint">Quantity</string>
    <string name="ingredientNameHint">Name</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="deleteAllIngredients">Delete All</string>
    <string name="title_activity_manage_pantry">Manage Pantry</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_view_recieved_recipe">Received Recipe</string>
    <string name="title_activity_manage_friends">Manage Friends</string>
    <string name="title_activity_choose_add_friend">From?</string>
    <string name="title_activity_enter_friend">Enter Friend Info</string>
    <string name="title_activity_edit_friend_info">Edit Friend Info</string>
    <string name="title_activity_search_users">Search Users</string>
    <string name="title_activity_keyword_search">Search Results</string>
    <string name="title_activity_choose_send_method">Send Via</string>
    <string name="title_activity_send_email">Send Email</string>
    <string name="title_activity_send_to_friend">SendToFriendActivity</string>
    <string name="title_activity_view_favorite_recipe">ViewFavoriteRecipeActivity</string>

</resources>