<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bCreateDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:onClick="clickHandler"
        android:text="@string/createDone"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bCreateDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:onClick="clickHandler"
        android:text="@string/createDelete"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bCreateAddPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:onClick="clickHandler"
        android:text="@string/createAddPhoto"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bCreateRemovePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:onClick="clickHandler"
        android:text="@string/createDeletePhoto"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/createEnterName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:hint="@string/createNameHint"
        android:inputType="text" />

    <Button
        android:id="@+id/bCreateAddIngredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:onClick="clickHandler"
        android:text="@string/createIngredientHint"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/createEnterSteps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:hint="@string/createStepsHint"
        android:inputType="textMultiLine"
        android:lines="3"
        android:scrollHorizontally="false" />

</LinearLayout>