<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/addIngredientQuantity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:hint="@string/quantityHint"
            android:inputType="number" />

        <Spinner
            android:id="@+id/addIngredientMeasurement"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <EditText
            android:id="@+id/addIngredientName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:hint="@string/ingredientNameHint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bAddIngredient"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:onClick="clickHandler"
            android:text="@string/addIngredient"
            android:textSize="12sp" />

        <Button
            android:id="@+id/deleteAllIngredient"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:onClick="clickHandler"
            android:text="@string/deleteAllIngredients"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bIngredientsDone"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:onClick="clickHandler"
            android:text="@string/createDone"
            android:textSize="12sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lViewIngredients"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>